# jup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  app.js  index.html  package-lock.json  package.json  server.js  styles.css  tsconfig.json
.github/workflows/: docs.yml
docs/: _config.yml  agent-integration.md  architecture.md  cli-json-contract.md  cli-release-plan.md  cli-technical-design.md  complete-version-roadmap.md  index.md  jupiter-quote-design.md  npm-alpha-release-checklist.md  pay-sh-implementation-notes.md  product.md  quickstart.md  risk-review-export-design.md  sdk-technical-design.md  transaction-request-skeleton-design.md
docs/_layouts/: default.html
docs/assets/: docs.css
docs/releases/: 0.1.0-alpha.0.md  0.1.0-alpha.1.md  0.1.0-alpha.10.md  0.1.0-alpha.11.md  0.1.0-alpha.12.md  0.1.0-alpha.13.md  0.1.0-alpha.14.md  0.1.0-alpha.15.md  0.1.0-alpha.16.md  0.1.0-alpha.17.md  0.1.0-alpha.18.md  0.1.0-alpha.2.md  0.1.0-alpha.4.md  0.1.0-alpha.5.md  0.1.0-alpha.8.md  0.1.0-alpha.9.md  1.0.0.md
examples/: node-agent-explain-policy.ts  node-agent-pay-jupiter.ts  node-agent-policy-profiles.ts  node-agent-trusted-recipient.ts
npm/: README.md  package-lock.json  package.json
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: lib.rs
scripts/: alpha-smoke.mjs  docs-contract-check.mjs  execute-smoke.mjs  npm-pack-dry-run.mjs  release-check.mjs  sdk-jupiter-live-smoke.mjs  sdk-smoke.mjs  server-api-smoke.mjs
sdk/: index.ts
(+1 files in other folders)
